# spotimy

./: .gitignore  .npmrc  _types.py  app.py  buf.gen.yaml  buf.work.yaml  buf.yaml  package.json  plots.py  pnpm-lock.yaml  pnpm-workspace.yaml  ports.md  roadmap.md  testing.py  tsconfig.json
api/: buf.gen.yaml
api/javascript/: package.json  tsconfig.json  tsconfig.json2
api/report/v1/: report.proto
api/scraper/v1/: scraper.proto
api/spotimy/v1/: artist.proto  track-history.proto  track.proto  user.proto
api/web/: package.json
apps/gateway/: gateway  go.mod  go.sum
apps/gateway/cmd/: main.go
apps/web/: package.json  vite.config.ts
apps/web/src/: app.d.ts  app.html  hooks.server.ts
components/music/: package.json  pnpm-lock.yaml  tsconfig.json
components/music/prisma/: dev.db  dev.db-journal  schema.prisma
components/music/src/: index.ts
components/report/: pyproject.toml
components/report/api/reports/v1/: report.proto
components/report/src/: reports.py
components/scraper/: pyproject.toml
components/scraper/src/: client.py  main.py  scraper.py
components/user/: package.json
components/user/prisma/: dev.db  dev.db-journal  schema.prisma
components/user/src/: index.ts  user.fixtures.ts  user.service.ts
tex/: report.fdb_latexmk  report.fls  report.tex  report.xdv
web/: .gitignore  .prettierrc  README.md  package-lock.json  package.json
web/prisma/: schema.prisma
web/src/: app.d.ts  hooks.server.ts
web/src/fixtures/: artist.ts  history.ts  index.ts  user.ts
web/src/routes/: +layout.svelte  +page.svelte
(+172 files in other folders)
